# C-plus-plus-course

./: README.md
black-belt/week1/: CMakeLists.txt  budget_san_fail.cpp  san_fail.cpp
brown-belt/final/: CMakeLists.txt  part_a.cpp  part_b.cpp  part_c.cpp  part_d.cpp  part_e.cpp
brown-belt/week1/: hash_set.cpp  node_next.h  person_hash.cpp  point_hasher.cpp  priority_collection.cpp  secondary_index.cpp
brown-belt/week2/: CMakeLists.txt  collide.cpp  comment_server.cpp  refactoring.cpp  spendings_json.cpp  spendings_xml.cpp
brown-belt/week3/: CMakeLists.txt  concurrent_map_2.cpp  lazy_value.cpp  main1.cpp  pipeline.cpp  polynomial.cpp  print_stats_2.cpp  synchronized_2.cpp  zoo.cpp
brown-belt/week4/: CMakeLists.txt  booking.h  main.cpp  unique_ptr.cpp
brown-belt/week5/: CMakeLists.txt  booking.cpp  budget_bad_base.cpp  budget_good_base.cpp  compute_income.cpp  ebook.cpp  filter_domains.cpp  print_stats.cpp  route_manager.cpp  (+3 more)
yellow-belt/week1/: CMakeLists.txt  main.cpp  matrix.h
yellow-belt/week1/integral types/: average_temperature_task.cpp  parallelepiped.cpp
yellow-belt/week1/matrix_task/: matrix.cpp
yellow-belt/week1/templates/: sqr.cpp
yellow-belt/week1/tuples and pairs/: TeamTasks.cpp  TeamTasks.h  regions_base.cpp
yellow-belt/week2/: CMakeLists.txt  main.cpp
yellow-belt/week2/unit tests summary/: PersonTests.cpp  RationalTests.cpp  RealRootsCountTests.cpp  TestIsPalindrome.cpp
yellow-belt/week2/using unit tests/: decomposition.cpp
yellow-belt/week3/: CMakeLists.txt  main.cpp
yellow-belt/week3/decomposition2/: bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
yellow-belt/week3/multi-file projects/: PhoneNumber.cpp  PhoneNumber.h  Rectangle.cpp  rectangle.h  sum_reverse_sort.cpp
yellow-belt/week4/: CMakeLists.txt  main.cpp
yellow-belt/week4/deque queue/: expression_formatter.cpp  names_and_surnames4.cpp  nearest_element.cpp  starts_with.cpp
yellow-belt/week4/iterators intro/: find_greater_element.cpp  print_vector_part.cpp  split.cpp
yellow-belt/week4/iterators usage/: demography_stat.cpp  get_perms_reversed.cpp  merge_sort.cpp  persinal_income_pro.cpp  personal_income_helpers.h  personal_income_starter.cpp  remove_duplicates.cpp
(+126 files in other folders)
