cmake_minimum_required(VERSION 3.20)
project(week3)

set(CMAKE_CXX_STANDARD 20)

add_executable(week3
        main.cpp
        print_stats_2.cpp
        lazy_value.cpp
        synchronized_2.cpp
        concurrent_map_2.cpp
        polynomial.cpp
        animals.h
        zoo.cpp
        pipeline.cpp
        main1.cpp
        Common.h
        )
